// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Filters Should not render state, perfection and tags filters for limited role 1`] = `
<div
  class="Filters"
>
  <div>
    Filters-Search mock. Props used: {"filterValue":"AB"}
  </div>
  <div>
    Filters-Member mock. Props used: {"filterValues":["user2","user3"],"currentUser":{"login":"user0","name":{"ru":"Юзер0"}}}
  </div>
  <div>
    Filters-Owner mock. Props used: {"filterValues":["user4"],"currentUser":{"login":"user0","name":{"ru":"Юзер0"}}}
  </div>
  <div>
    Filters-Department mock. Props used: {"filterValues":[2,3],"currentDepartment":1}
  </div>
  <div>
    Filters-Externals mock. Props used: {"filterValues":[true]}
  </div>
</div>
`;

exports[`Should render Filters default 1`] = `
<div
  class="Filters"
>
  <div>
    Filters-Search mock. Props used: {"filterValue":"AB"}
  </div>
  <div>
    Filters-Member mock. Props used: {"filterValues":["user2","user3"],"currentUser":{"login":"user0","name":{"ru":"Юзер0"}}}
  </div>
  <div>
    Filters-Owner mock. Props used: {"filterValues":["user4"],"currentUser":{"login":"user0","name":{"ru":"Юзер0"}}}
  </div>
  <div>
    Filters-Department mock. Props used: {"filterValues":[2,3],"currentDepartment":1}
  </div>
  <div>
    Filters-States mock. Props used: {"filterValues":["develop","needinfo"]}
  </div>
  <div>
    Filters-IsSuspicious mock. Props used: {"filterValues":[false]}
  </div>
  <div>
    Filters-Externals mock. Props used: {"filterValues":[true]}
  </div>
  <div>
    Filters-Tags mock. Props used: {"filterValues":[10,122]}
  </div>
</div>
`;
